<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/Lavender_Web"
    android:gravity="center_horizontal"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your"
        android:textColor="#3C4F76"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:padding="8dp"
        android:background="@color/Y_in_MtnBlue"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes"
        android:textColor="@color/Y_in_MtnBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textSize="18sp"
        android:textColor="@color/Pale_Silver"
        android:backgroundTint="@color/Ghost_White"/>

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_31_05_1988"
        android:textColor="@color/Y_in_MtnBlue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selected_date"
        android:textColor="@color/Ash_Gray"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvAgeInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_140000000"
        android:textColor="@color/Y_in_MtnBlue"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age_in_minutes"
        android:textColor="@color/Ash_Gray"
        android:textSize="15sp"
        android:textStyle="bold"
        />

</LinearLayout>